--- a/index.html
+++ b/index.html
@@ -1,35 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <title>My first HTML Document</title>
+  <script src="https://cdn.jsdelivr.net/npm/vega@5.22.1"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.2.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.20.8"></script>
 </head>
 <body>
-    <h1> <font color = "purple"> Table of Student and Grade </font> </h1>
-    <table border ="1" cellpadding="10%" >
-        <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Grade</th>
-        </tr>
-
-        <tr>
-            <td>John</td>
-            <td>Doe</td>
-            <td>HD</td>
-        </tr>
-        <tr>
-            <td>Jill</td>
-            <td>Jackson</td>
-            <td>D</td>
-        </tr>
-        <tr>
-            <td>Jane</td>
-            <td>Smith</td>
-            <td>C</td>
-        </tr>
-    </table>
-
-    <h1> <font color ="pink"> Other </font></h1>
-    <a href="https://learning.monash.edu/course/view.php?id=31408&section=19"> FIT3179 Week 4 </a>
+  <div id="vis"/>
+  <script>
+    fetch("./js/chloropeth_map.vg.json").then(response => response.json()).then(spec => {
+        vegaEmbed("#vis", spec, {mode: "vega-lite"})
+        .then(console.log)
+        .catch(console.warn);
+        })
+        .catch(error => console.error("Error loading Vega spec:", error));
+  </script>
 </body>
 </html>
