--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
   <script src="https://cdn.jsdelivr.net/npm/vega@5.22.1"></script>
@@ -8,7 +8,7 @@
 <body>
   <div id="vis"/>
   <script>
-    fetch("./js/chloropeth_map.vg.json").then(response => response.json()).then(spec => {
+    fetch("./Homework Week 9/js/chloropeth_map.vg.json").then(response => response.json()).then(spec => {
         vegaEmbed("#vis", spec, {mode: "vega-lite"})
         .then(console.log)
         .catch(console.warn);
@@ -16,4 +16,4 @@
         .catch(error => console.error("Error loading Vega spec:", error));
   </script>
 </body>
-</html>
+</html> -->
