--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <script src="https://cdn.jsdelivr.net/npm/vega@5.22.1"></script>
@@ -16,4 +16,4 @@
         .catch(error => console.error("Error loading Vega spec:", error));
   </script>
 </body>
-</html> -->
+</html>
