--- a/data_vis_2_final/index.html
+++ b/data_vis_2_final/index.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body>
+<body style="background-color: #FDFDFD;">
 <div class="page">
 
     <!-- Data Vis Heading -->
@@ -41,6 +41,9 @@
     <!-- Section Content--> 
     <div class="chart-row">
         <div class="chart-column" style="flex: 1;">
+            <p> Text description and stuff </p>
+        </div> 
+        <div class="chart-column" style="flex: 4;">
             <div id="eng_lga_map" class="vis-container"></div>
         </div> 
     </div>
@@ -77,7 +80,7 @@
     </div>
     <!-- Section Content-->
     <div class="chart-row">
-        <div class="chart-column">
+        <div class="chart-column" style="flex: 1;">
             <div id="top10_lollipop" class="vis-container"></div>
             <div class="annotation">
                 <div class="annotation-title">Which languages do Australia know best?</div>
@@ -86,7 +89,21 @@
                 </div>
             </div>
         </div>
-        <div class="chart-column">
+        <div class="chart-column" style="flex: 1;">
+            <div id="slope_chart" class="vis-container"></div>
+        </div>
+    </div>
+    <div class="chart-row">
+        <div class="chart-column" style="flex: 2;">
+            <div class="annotation">
+                <div class="annotation-title">A deeper dive into the Top 10 Languages</div>
+                <div class="annotation-text">
+                Use the 'Language' selector to explore the number of spekaers across Australia.
+                </div>
+            </div>
+            <div id="lang_state_chloro" class="vis-container"></div>
+        </div>
+        <div class="chart-column" style="flex: 1;">
             <div id="slope_chart" class="vis-container"></div>
         </div>
     </div>
