--- a/data_vis_2_final/index.html
+++ b/data_vis_2_final/index.html
@@ -91,6 +91,11 @@
         </div>
         <div class="chart-column" style="flex: 1;">
             <div id="slope_chart" class="vis-container"></div>
+            <div class="annotation">
+                <div class="annotation-text">
+                    Select a Language in the legend to highlight it's change over the years!
+                </div>
+            </div>
         </div>
     </div>
     <div class="chart-row">
@@ -104,7 +109,7 @@
             <div id="lang_state_chloro" class="vis-container"></div>
         </div>
         <div class="chart-column" style="flex: 1;">
-            <div id="slope_chart" class="vis-container"></div>
+            <p> Text description and stuff </p>
         </div>
     </div>
 
@@ -122,6 +127,9 @@
 </div>
 
 <script type="text/javascript">
+
+    let selectedLanguage = null;
+    let slopeChartView = null;
     var spec1 = "js/top_10_languages.vg.json";
     var spec2 =  "js/eng_proficiency_dotplot.vg.json"; 
     var spec3 = "js/speak_eng_only_lga.vg.json";
@@ -130,16 +138,16 @@
     var spec6 = "js/broad_cat_heatmap.vg.json";
     var spec7 = "js/diverging_bar.vg.json";
 
-    vegaEmbed('#top10_lollipop', spec1,{actions:false}).then(function(result) {
+    vegaEmbed('#top10_lollipop', spec1, {actions:false}).then(function(result) {
     }).catch(console.error);
-  
-    vegaEmbed('#fluency_dotplot', spec2,{actions:false}).then(function(result) {
+
+    vegaEmbed('#fluency_dotplot', spec2, {actions:false}).then(function(result) {
     }).catch(console.error);
 
     vegaEmbed('#eng_lga_map', spec3,{actions:false}).then(function(result) {
     }).catch(console.error);
-    
-    vegaEmbed('#slope_chart', spec4,{actions:false}).then(function(result) {
+
+    vegaEmbed('#slope_chart', spec4, {actions:false}).then(function(result) {
     }).catch(console.error);
 
     vegaEmbed('#lang_state_chloro', spec5,{actions:false}).then(function(result) {
@@ -151,7 +159,6 @@
     vegaEmbed('#diverging_bar', spec7,{actions:false}).then(function(result) {
     }).catch(console.error);
 
-    
 </script>
 
 </body>
