last data set for data vis

--- a/data_vis_2_final/index.html
+++ b/data_vis_2_final/index.html
@@ -45,6 +45,11 @@
         </div> 
         <div class="chart-column" style="flex: 4;">
             <div id="eng_lga_map" class="vis-container"></div>
+            <div class="annotation">
+                <div class="annotation-text">
+                    👆 Select a 'Map Centre' to view a specific state and take a closer look by changing the 'Zoom' slider!
+                </div>
+            </div>
         </div> 
     </div>
     <div class="chart-row">
@@ -82,31 +87,24 @@
     <div class="chart-row">
         <div class="chart-column" style="flex: 1;">
             <div id="top10_lollipop" class="vis-container"></div>
-            <div class="annotation">
-                <div class="annotation-title">Which languages do Australia know best?</div>
-                <div class="annotation-text">
-                Australia's Census questions asks residents about which language they speak at home. This is referred to as the LANP variables. This chart shows the top 10 most common languages spoken at home, excluding English.
-                </div>
-            </div>
         </div>
         <div class="chart-column" style="flex: 1;">
             <div id="slope_chart" class="vis-container"></div>
             <div class="annotation">
                 <div class="annotation-text">
-                    Select a Language in the legend to highlight it's change over the years!
+                    👆 Select a 'Language' in the legend to highlight it's change over the years!
                 </div>
             </div>
         </div>
     </div>
     <div class="chart-row">
         <div class="chart-column" style="flex: 2;">
+            <div id="lang_state_chloro" class="vis-container"></div>
             <div class="annotation">
-                <div class="annotation-title">A deeper dive into the Top 10 Languages</div>
                 <div class="annotation-text">
-                Use the 'Language' selector to explore the number of spekaers across Australia.
+                👆 Use the 'Language' selector to explore the proportion of speakers of different languages across Australia!
                 </div>
             </div>
-            <div id="lang_state_chloro" class="vis-container"></div>
         </div>
         <div class="chart-column" style="flex: 1;">
             <p> Text description and stuff </p>
