adding analysis to html

--- a/data_vis_2_final/index.html
+++ b/data_vis_2_final/index.html
@@ -42,16 +42,17 @@
     <div class="chart-row">
         <div class="chart-column" style="flex: 1; justify-content: center;">
             <h2> Who speaks English in Australia? </h2>
-            <p>English is the most common langauge in Australia, but how many people speak English only at home?</p>
-            <p>👀 Explore the map to see the proportion of people in each Local Government Area who only speak English at home</p>
+            <p>English is the most common language in Australia, but how many people speak only English at home?</p>
+            <p>The East coast of Australia has the highest proportion of people who speak only English at home which includes the states of Queensland, New South Wales, Australian Capital Territory and Victoria. Majorift of these states have over 70% of their LGA's speaking only English at home.</p>
+            <p> 👀 Explore the map to see the proportion of people in each Local Government Area who only speak English at home</p>
+        </div>
+        <div class="chart-column" style="flex: 5;">
+            <div id="eng_lga_map" class="vis-container"></div>
             <div class="annotation">
                 <div class="annotation-text">
                     👉 Select a 'Map Centre' to view a specific state and take a closer look by changing the 'Zoom' slider!
                 </div>
             </div>
-        </div>
-        <div class="chart-column" style="flex: 5;">
-            <div id="eng_lga_map" class="vis-container"></div>
         </div> 
     </div>
     <div class="chart-row">
@@ -83,16 +84,17 @@
     <div class="chart-row">
         <div class="chart-column" style="flex: 4;">
             <div id="heatmap" class="vis-container"></div>
-        </div> 
-        <div class="chart-column" style="flex: 1; justify-content: center;">
-            <h2> What type of languages do Australians speak at home? </h2>
-            <p> The 2021 Australian census revealed a wide variety of languages are used at home, reflecting the multi-cultural nature of Australia.</p>
-            <p> 👀 Explore how language groups from different parts of the world are disrtibuted across Australia.</p>
             <div class="annotation">
                 <div class="annotation-text">
                     👈 Hover over the heat map to explore the % of states that speak different language groups at home!
                 </div>
             </div>
+        </div> 
+        <div class="chart-column" style="flex: 1; justify-content: center;">
+            <h2> What type of languages do Australians speak at home? </h2>
+            <p> The 2021 Australian census revealed a wide variety of languages are used at home, reflecting the multi-cultural nature of Australia.</p>
+            <p> The most common global region of languges spoken in Australia is Asia, which is comprised of Eastern Asian, Southeast Asian and Southern Asian language categories. Languages such as Mandarin, Vietnamese and Punjabi all hail from this region of the world. </p>
+            <p> 👀 Explore how language groups from different parts of the world are distributed across Australia.</p>
         </div>
     </div>
 
@@ -124,16 +126,18 @@
     <div class="chart-row">
         <div class="chart-column" style="flex: 1; justify-content: center;">
             <h2> How common are the Top 10 Non-English Languages acrosss Australia? </h2>
+            <p> Mandarin is the most common Non-English Language in Australia with approximately 2.7% of the population using it as their main language at home.</p>
             <p> 👀 Explore what percentage of each state speak one of the Top 10 Non-English Languages! </p>
+            <p>Compared to the rest of the country, states New South Wales and Victoria generally have a higher proportion of their population speaking a Non-English Language at home. This highlights how multicultural and diverse the two largest states in Australia are!</p>
+            <p> 👀 Use the chart below to take a deeper dive into the number of speakers of each language per state! </p>
+        </div> 
+        <div class="chart-column" style="flex: 4;">
+            <div id="lang_state_chloro" class="vis-container"></div>
             <div class="annotation">
                 <div class="annotation-text">
                     👉 Use the 'Language' selector to explore the proportion of speakers of different languages across Australia!
                 </div>
             </div>
-            <p> 👀 Use the chart below to take a deeper dive into the number of speakers of each language per state! </p>
-        </div> 
-        <div class="chart-column" style="flex: 4;">
-            <div id="lang_state_chloro" class="vis-container"></div>
         </div>
     </div>
     <div class="chart-row">
