final html updates

--- a/data_vis_2_final/index.html
+++ b/data_vis_2_final/index.html
@@ -43,14 +43,14 @@
         <div class="chart-column" style="flex: 1; justify-content: center;">
             <h2> Who speaks English in Australia? </h2>
             <p>English is the most common language in Australia, but how many people speak only English at home?</p>
-            <p>The East coast of Australia has the highest proportion of people who speak only English at home which includes the states of Queensland, New South Wales, Australian Capital Territory and Victoria. Majorift of these states have over 70% of their LGA's speaking only English at home.</p>
-            <p> 👀 Explore the map to see the proportion of people in each Local Government Area who only speak English at home</p>
+            <p>The East coast of Australia has the highest proportion of people who speak only English at home which includes the states of Queensland, New South Wales, Australian Capital Territory and Victoria. Majority of these states have over 70% of their LGA's speaking only English at home.</p>
+            <p> 👀 Explore the map to see the proportion of people in each Local Government Area who only speak English at home!</p>
         </div>
         <div class="chart-column" style="flex: 5;">
             <div id="eng_lga_map" class="vis-container"></div>
             <div class="annotation">
                 <div class="annotation-text">
-                    👉 Select a 'Map Centre' to view a specific state and take a closer look by changing the 'Zoom' slider!
+                    👆 Select a 'Map Centre' to view a specific state and take a closer look by changing the 'Zoom' slider!
                 </div>
             </div>
         </div> 
@@ -68,7 +68,7 @@
             <div id="diverging_bar" class="vis-container"></div>
             <div class="annotation">
                 <div class="annotation-text">
-                    👀 So not everyone uses English as their main language at home. Discover what percent of the population use a non-English language at home.  
+                    👀 So not everyone uses English as their main language. Discover what percent of the population use a non-English language at home compared to only English.  
                 </div>
             </div>
         </div> 
@@ -86,13 +86,13 @@
             <div id="heatmap" class="vis-container"></div>
             <div class="annotation">
                 <div class="annotation-text">
-                    👈 Hover over the heat map to explore the % of states that speak different language groups at home!
+                    👆 Hover over the heat map to explore the % of states that speak different language groups at home!
                 </div>
             </div>
         </div> 
         <div class="chart-column" style="flex: 1; justify-content: center;">
             <h2> What type of languages do Australians speak at home? </h2>
-            <p> The 2021 Australian census revealed a wide variety of languages are used at home, reflecting the multi-cultural nature of Australia.</p>
+            <p> The 2021 Australian census revealed a wide variety of languages are used at home, reflecting the multicultural nature of Australia.</p>
             <p> The most common global region of languges spoken in Australia is Asia, which is comprised of Eastern Asian, Southeast Asian and Southern Asian language categories. Languages such as Mandarin, Vietnamese and Punjabi all hail from this region of the world. </p>
             <p> 👀 Explore how language groups from different parts of the world are distributed across Australia.</p>
         </div>
@@ -110,7 +110,7 @@
             <div id="top10_lollipop" class="vis-container"></div>
             <div class="annotation">
                 <div class="annotation-text">
-                    👀 The 10 most commmon Non-English languages spoken at home in Australia according to the 2021 Census.
+                    👀 The Top 10 Non-English languages spoken at home in Australia according to the 2021 Census.
                 </div>
             </div>
         </div>
@@ -135,7 +135,7 @@
             <div id="lang_state_chloro" class="vis-container"></div>
             <div class="annotation">
                 <div class="annotation-text">
-                    👉 Use the 'Language' selector to explore the proportion of speakers of different languages across Australia!
+                    👆 Use the 'Language' selector to explore the proportion of speakers of different languages across Australia!
                 </div>
             </div>
         </div>
